--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,18 +9,18 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Tatakai</a>
+            <a class="navbar-brand" href="{{ path('home') }}">TonKai</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="navbar-collapse collapse show" id="navbarColor02" style="">
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog">Articles
+                    <a class="nav-link" href="{{ path('blog') }}">Personnages
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog/new">Créer un article</a>
+                    <a class="nav-link" href="{{ path('personnage_create') }}">Créer un personnage</a>
                 </li>
             </ul>
         </div>
