--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -2,12 +2,11 @@
 
 {% block body %}
 <article>
-        <h2>Titre de l'article</h2>
-        <div class="metadata">Ecrit le 10/05/2018 à 19:00 dans la catégorie Politique</div>
+        <h2>{{video.nom}}</h2>
         <div class="content">
-            <img src="http://placehold.it/350x150" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laudantium recusandae perspiciatis atque distinctio tempore?</p>
-            <p>Delectus magnam beatae alias, dolore perspiciatis cumque ullam temporibus explicabo provident inventore nemo vel minima?</p>
+            <img src="{{asset(video.image)}}" alt="">
+            <p>{{video.game}}</p>
+            <p>{{video.description}}</p>
         </div>
     </article>
 {% endblock %}
