Implémentation du type de vidéos avec les différents onglets "World of Fight" et "Opening". Modification de l'entité Video et sauvegarde des données de la table Video dans le dossier "table data"

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,30 +2,36 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Tonkai{% endblock %}</title>
         <link rel="stylesheet" 
         href="https://bootswatch.com/4/darkly/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{{ path('home') }}">TonKai</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: fixed; top: 0; width: 100%;">
+            <a class="navbar-brand" href="{{ path('blog') }}">TonKai</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="navbar-collapse collapse show" id="navbarColor02" style="">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('blog') }}">Personnages
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('personnage_create') }}">Créer un personnage</a>
-                </li>
-            </ul>
-        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('blog') }}">Videos
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('serie') }}">World of Fight</a>
+                    </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="{{ path('opening') }}">Openings</a>
+                    </li>
+                         <li class="nav-item">
+                        <a class="nav-link" href="{{ path('video_create') }}">Ajouter une video</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div class="container">
+        <div class="container" style="text-align: center; margin-top:5%;">
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
